add popdoc to doc.js.  getting cannot post index.html error

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <form id="lookupForm" action="index.html" method="post">
       <label for="queryIn">What issues would you like the doctor to address?</label>
       <input type="text" id="queryIn" name="" value="">
-      <button type="submit" class="btn btn-info" name="button"></button>
+      <button type="submit" class="btn btn-info" name="button">Submit</button>
     </form>
     <div id="doctorOut">
 
