create doctor object

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <form id="lookupForm" action="index.html" method="post">
-      <label for="queryIn">What issues would you like the doctor to address?</label>
+      <label for="queryIn">Look for a doctor able to resolve your issue:</label>
       <input type="text" id="queryIn" name="" value="">
-      <button type="submit" class="btn btn-info" name="button">Submit</button>
+      <label for="">Look for a doctor by name:</label>
+      <input type="text" id="nameIn" name="" value="">
+      <button type="button" class="btn btn-info" name="button">Submit</button>
     </form>
     <div id="doctorOut">
 
