got an CORs error

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <div class="container">
 
       <form id="lookupForm" action="index.html" method="post">
-        <label for="queryIn">Look for a doctor able to resolve your issue:</label>
+        <label for="queryIn">Look for a doctor specialized in your issue:</label>
         <br>
         <input type="text" id="queryIn" name="" value="">
         <button type="button" id="queryBtn" class="btn btn-info" name="button">Submit</button>
