fix issues with name search

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
         <label for="queryIn">Look for a doctor specialized in your issue:</label>
         <br>
         <input type="text" id="queryIn" name="" value="">
-        <button type="button" id="queryBtn" class="btn btn-info" name="button">Submit</button>
         <br>
         <br>
         <br>
         <label for="">Look for a doctor by name:</label>
         <br>
         <input type="text" id="nameIn"  value="">
-        <button type="button" id="nameBtn" class="btn btn-info" name="button">Submit</button>
+        <!-- <button type="button" id="nameBtn" class="btn btn-info" name="button">Submit</button> -->
+        <button type="button" id="queryBtn" class="btn btn-info" name="button">Submit</button>
       </form>
     </div>
     <div id="doctorOut">
