add phone number, website outputs and an error message for a failed connection attempt.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
   </head>
   <body>
     <div class="container">
-
       <form id="lookupForm" action="index.html" method="post">
         <label for="queryIn">Look for a doctor specialized in your issue:</label>
         <br>
@@ -17,60 +16,16 @@
         <label for="">Look for a doctor by name:</label>
         <br>
         <input type="text" id="nameIn"  value="">
-        <!-- <button type="button" id="nameBtn" class="btn btn-info" name="button">Submit</button> -->
         <button type="button" id="queryBtn" class="btn btn-info" name="button">Submit</button>
       </form>
     </div>
     <div id="doctorOut">
 
     </div>
+    <p class="showErrors"></p>
   </body>
 </html>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="doc1">
-
-</div>
-<div class="doc2 doc">
-
-</div>
-<div class="doc3 doc">
-
-</div>
-<div class="doc4 doc">
-
-</div>
-<div class="doc5 doc">
-
-</div>
-<div class="doc6 doc">
-
-</div>
-<div class="doc7 doc">
-
-</div>
-<div class="doc8 doc">
-
-</div>
-<div class="doc9 doc">
-
-</div>
-<div class="doc10 doc">
-
-</div> -->
